# terraform-provider-pxc

./: .gitignore  .gitlab-ci.yml  .goreleaser.yml  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  tddog.toml
docs/: index.md
docs/data-sources/: ceph_access.md  cloud_file_secret.md  cloud_secret.md  cloud_secrets.md  cloud_self.md  cloud_vms.md  cluster_vars.md  pve_api_get.md  pve_host.md  pve_inventory.md  ssh_key.md
docs/ephemeral-resources/: kubeconfig.md
docs/resources/: cloud_age_secret.md  cloud_secret.md  gotify_app.md  pve_gotify_target.md  pve_graphite_exporter.md
internal/provider/: ceph_access_data_source.go  cloud_age_secret_resource.go  cloud_file_secret_data_source.go  cloud_secret_data_source.go  cloud_secret_resource.go  cloud_secrets_data_source.go  cloud_vms_data_source.go  cluster_self_data_source.go  cluster_vars_data_source.go  example_data_source.go  gotify_app_resource.go  kubeconfig_ephemeral_resource.go  provider.go  proxmox_host_data_source.go  pve_api_get_data_source.go  pve_gotify_target_resource.go  pve_graphite_exporter_resource.go  pve_inventory_data_source.go  ssh_key_data_source.go
internal/provider/protos/: cloud.pb.go  cloud_grpc.pb.go  health.pb.go  health_grpc.pb.go
protos/: cloud.proto  health.proto
src/pve_cloud_rpc/: server.py
src/pve_cloud_rpc/protos/: cloud_pb2.py  cloud_pb2_grpc.py  health_pb2.py
templates/: index.md.tmpl
templates/data-sources/: ssh_key.md.tmpl
tools/: tools.go
