[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpyc-pve-cloud"
authors = [{ name = "Tobias Huebner", email = "tobias.huebner@vmzberlin.com" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
version = "0.0.1"
dependencies = [
  "grpcio==1.76.0"
]

[project.scripts]
pcrpc = "pve_cloud_rpc.server:main"



